# tandem

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHECKS.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GF_H_MATRIX_STAGE1_IMPLEMENTATION.md  HMATRIX_ERROR_ESTIMATION.md  HMATRIX_VISUALIZE_PLAN.md  INSTALL_MACOS_ARM.md  LICENSE.md  PHASE1_ADJOINT_DG_IMPLEMENTATION.md  RANDOMIZED_METHODS.md  README.md  REGRESSION_ANALYSIS.md  arm-release-plan.md  azure-pipelines-clang-format.yml  azure-pipelines-template.yml  azure-pipelines.yml  dependencies.Dockerfile  log.txt  tandem.imp
app/: CMakeLists.txt  check-bc.cpp  config.h.in  gf-hmatrix-validate.cpp  gf-hmatrix-visualize.cpp  gf-solve-bench.cpp  main.cpp  poisson.cpp  preprocess.cpp  static.cpp  tandem.cpp  tandemBad.cpp  tandemplay.cpp  tensors.cpp  test-gauss.cpp  test-mesh.cpp  test-scatter.cpp  warp-blend-opt.cpp  writer.h
app/common/: Banner.cpp  Banner.h  CmdLine.h  ElasticityScenario.h  HMatrixConfig.h  InterfacePetsc.h  MGConfig.cpp  MGConfig.h  MeshConfig.cpp  MeshConfig.h  PetscBlockMatrix.cpp  PetscBlockMatrix.h  PetscBlockVector.cpp  PetscBlockVector.h  PetscDGMatrix.cpp  PetscDGMatrix.h  PetscDGShell.cpp  PetscDGShell.h  PetscDGShellPtAP.cpp  PetscDGShellPtAP.h  PetscInterplMatrix.cpp  PetscInterplMatrix.h  PetscLinearSolver.cpp  PetscLinearSolver.h  PetscLoggingUtils.h  PetscMatrix.cpp  PetscMatrix.h  PetscSolver.cpp  PetscSolver.h  PetscTS.cpp  PetscTS.h  PetscTimeSolver.cpp  PetscTimeSolver.h  PetscUtil.h  PetscVector.cpp  PetscVector.h  PoissonScenario.h  Scenario.cpp  Scenario.h  TandemLogfile.h  (+9 more)
app/form/: AbstractAdapterOperator.h  AbstractFrictionOperator.h  AdapterOperator.h  FacetFunctionalFactory.h  FrictionOperator.h  HMatrixGreenFunction.cpp  HMatrixGreenFunction.h  SeasFDOperator.cpp  SeasFDOperator.h  SeasQDDiscreteGreenOperator.cpp  SeasQDDiscreteGreenOperator.h  SeasQDOperator.cpp  SeasQDOperator.h  VolumeFunctionalFactory.h
app/kernels/: elasticity.py  elasticity_adapter.py  generate.py  poisson.py  poisson_adapter.py  rate_and_state.py  tandem.py
app/localoperator/: Adapter.h  AdapterBase.cpp  AdapterBase.h  DieterichRuinaAgeing.h  DieterichRuinaAging.h  DieterichRuinaBase.h  DieterichRuinaSlip.h  Elasticity.cpp  Elasticity.h  ElasticityAdapter.cpp  ElasticityAdapter.h  ModalInterpolation.h  NodalInterpolation.cpp  NodalInterpolation.h  Poisson.cpp  Poisson.h  PoissonAdapter.cpp  PoissonAdapter.h  RateAndState.h  RateAndStateBase.cpp  RateAndStateBase.h  ViscoelasticityAdapter.cpp
app/pc/: eigdeflate.c  eigdeflate.h  lspoly.c  lspoly.h  register.cpp  register.h  reig.cpp  reig.h  reig_aux.c  reig_aux.h  reig_impl.c  reig_impl.h
app/poisson/: Poisson.cpp  Poisson.h  Scenario.h
app/tandem/: AdaptiveOutputStrategy.h  BP1.cpp  BP1.h  Config.cpp  Config.h  Context.h  ContextBase.h  DieterichRuinaAgeing.h  DiscreteGreenAdapter.h  Elasticity.cpp  Elasticity.h  Fault.cpp  Fault.h  FrictionConfig.h  Monitor.cpp  Monitor.h  RateAndState.cpp  RateAndState.h  RateAndStateBase.cpp  RateAndStateBase.h  SEAS.cpp  SEAS.h  Scenario.h  SeasAdapterBase.cpp  SeasAdapterBase.h  SeasAdapterCommon.h  SeasConfig.cpp  SeasConfig.h  SeasElasticityAdapter.cpp  SeasElasticityAdapter.h  SeasOperator.h  SeasPoissonAdapter.cpp  SeasPoissonAdapter.h  SeasScenario.h  SeasSolution.h  SeasType.h  SeasWriter.h  Static.cpp  Static.h  VEMaterialParams.h  (+1 more)
src/: CMakeLists.txt  main.cpp
src/basis/: Equidistant.cpp  Equidistant.h  Functions.cpp  Functions.h  GaussLegendre.cpp  GaussLegendre.h  Nodal.cpp  Nodal.h  NumberingConvention.h  Quadrature.cpp  Quadrature.h  SimplexNodes.cpp  SimplexNodes.h  Util.h  WarpAndBlend.cpp  WarpAndBlend.h
src/form/: AbstractDGOperator.h  AbstractInterpolationOperator.h  BC.h  BoundaryMap.cpp  BoundaryMap.h  DG.cpp  DG.h  DGCurvilinearCommon.cpp  DGCurvilinearCommon.h  DGOperator.h  DGOperatorTopo.cpp  DGOperatorTopo.h  Error.cpp  Error.h  FacetInfo.h  FiniteElementFunction.cpp  FiniteElementFunction.h  InterpolationOperator.h  InverseInequality.h  LocalOperatorInterface.h  RefElement.cpp  RefElement.h  SolverInterface.h
src/geometry/: Affine.h  Curvilinear.cpp  Curvilinear.h  PointLocator.cpp  PointLocator.h  SimplexDistance.h  Vector.h
src/interface/: BlockMatrix.h  BlockVector.h  BlockView.h
src/io/: BoundaryProbeWriter.cpp  BoundaryProbeWriter.h  CSVWriter.h  DataType.h  Endianness.h  GMSHLexer.cpp  GMSHLexer.h  GMSHParser copy.cpp  GMSHParser.cpp  GMSHParser.h  GlobalSimplexMeshBuilder.cpp  GlobalSimplexMeshBuilder.h  GlobalSimplexMeshBuilder_backup.cpp  H5Parser.cpp  H5Parser.h  HDF5Adapter.h  HDF5BoundaryProbeWriter.cpp  HDF5BoundaryProbeWriter.h  HDF5MeshParser.cpp  HDF5MeshParser.h  HDF5ProbeWriter.cpp  HDF5ProbeWriter.h  HDF5Writer.cpp  HDF5Writer.h  MeshParser.cpp  MeshParser.h  PVDWriter.cpp  PVDWriter.h  Probe.h  ProbeWriter.cpp  ProbeWriter.h  ProbeWriterUtil.h  ScalarWriter.cpp  ScalarWriter.h  TableWriter.h  TecplotWriter.h  VTUAdapter.h  VTUWriter.cpp  VTUWriter.h  meshParser.h
src/kernels/: generate.py
src/mesh/: GenMesh.cpp  GenMesh.h  GlobalSimplexMesh.cpp  GlobalSimplexMesh.h  LocalFaces.h  LocalSimplexMesh.h  MeshData.h  Simplex.h  (+3 more)
test/: .gitattributes  CMakeLists.txt  H5Parser.cpp  HDF5MeshParser.cpp  HDF5Writer.cpp  MeshParserIntegration.cpp  MeshParserIntegrationPaths.h.in  README.md  basis.cpp  conftest.py  form.cpp  geometry.cpp  h_matrix_validation.cpp  io.cpp  main-mpi.cpp  parallel.cpp  quadrules.cpp  requirements.txt  script.cpp  simplex.cpp  tensor.cpp  test_convergence_static.py  test_correctness_volume_tagging.py  test_parallel_consistency.py  test_parallel_consistency_2D.py  test_parallel_consistency_3D.py  test_parallel_consistency_static.py  test_parallel_consistency_volume_tagging.py  test_probe_writer_consistency.py  test_regression_2D.py  test_regression_3D.py  test_regression_SEAS.py  test_regression_SEAS_2D.py  test_regression_static.py  test_regression_static_2D.py  test_regression_static_3D.py  test_static_convergence.py  test_traction_bc.py  util.cpp  volume_tagging.cpp
(+875 files in other folders)
